--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "next": "11.1.0",
+    "next-auth": "^3.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "stripe": "^8.169.0"
   },
   "devDependencies": {
     "@types/node": "^16.6.0",
