--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-toast-notifications": "^2.5.1",
     "sass": "^1.37.5",
     "stripe": "^8.169.0"
   },
